--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,2 @@
-                                                                              <h1 style="color:pink;">Gabriela Perez</h1>
+<h1 style="color:pink;">Gabriela Perez</h1>
+<p>Bio:</p>
