--- a/aboutme.html
+++ b/aboutme.html
@@ -1,2 +1,2 @@
-<h1 style="color:pink;">Gabriela Perez</h1>
-<p>Bio:</p>
+<h1 style="color:orange;">Gabriela Perez</h1>
+<p>Bio: My name is Gabriela Perez and i'm from Richmond California. I've lived in California for most of my life, but I did live in Mexico for about three years. Currently, i'm in a program called Girls Who Code </p> 
