--- a/aboutme.html
+++ b/aboutme.html
@@ -1,3 +1,3 @@
 <img src="profile_images.jpg" alt="baseddgaby" style="width:400px;height:400px;">
 <h1 style="color:orange;">Gabriela Perez</h1>
-<p>Bio: My name is Gabriela Perez and i'm from Richmond California. I've lived in California for most of my life, but I did live in Mexico for about three years. Currently, i'm in a program called Girls Who Code </p> 
+<p>Bio: My name is Gabriela Perez and i'm from Richmond California. I've lived in California for most of my life, but I did live in Mexico for about three years. Currently, i'm in a program called Girls Who Code because I wanted to get into coding before I go to college. My program's location is at Twitter HQ in San Francisco.  </p> 
