--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
-<img src="profile_images/851579580007579649/2Z9NJUpb.jpg" alt="baseddgaby" style="width:400px;height:400px;">
+<img src="profile_images/851579580007579649/2Z9NJUpb.jpg" alt="gabrielaperez" style="width:400px;height:400px;">
 <h1 style="color:orange;">Gabriela Perez</h1>
-<p1 style="color:yellow;">Bio:</p1> 
-<p2> My name is Gabriela Perez and i'm from Richmond California. I've lived in California for most of my life, but I did live in Mexico for about three years. Currently, i'm in a program called Girls Who Code because I wanted to get into coding before I go to college. My program's location is at Twitter HQ in San Francisco.</p> 
-<p3 style="color:yellow;">Fun Fact About Me:</p3> 
-<p4> I don't have any experience with coding, and this is my first time learning it </p> 
+<p1 style="color:pink;">Bio:</p1> 
+<p1> My name is Gabriela Perez and i'm from Richmond California. I've lived in California for most of my life, but I did live in Mexico for about three years. Currently, i'm in a program called Girls Who Code because I wanted to get into coding before I go to college. My program's location is at Twitter HQ in San Francisco.</p> 
+<p2 style="color:pink;">Fun Fact About Me:</p3> 
+<p2> I don't have any experience with coding, and this is my first time learning it </p> 
