--- a/aboutme.html
+++ b/aboutme.html
@@ -4,4 +4,4 @@
 <p1> My name is Gabriela Perez and i'm from Richmond California. I've lived in California for most of my life, but I did live in Mexico for about three years. Currently, i'm in a program called Girls Who Code because I wanted to get into coding before I go to college. My program's location is at Twitter HQ in San Francisco.</p> 
 <p2 style="color:pink;">Fun Fact About Me:</p2> 
 <p2> I don't have any experience with coding, and this is my first time learning it </p> 
-<p3> Work/Projects:</p3> 
+<p3> Work/Projects: Since I started getting into coding, i've done work on a website called Scratch. On that website I started making games like paddle ball or side scrollers. While working on that website i've started practicing how to make MVP's, storyboards, and wireframes.</p3> 
