--- a/aboutme.html
+++ b/aboutme.html
@@ -5,5 +5,5 @@
 <p2 style="color:pink;">Fun Fact About Me:</p2> 
 <p2> I don't have any experience with coding, and this is my first time learning it </p> 
 <p3 style="color:pink;"> Work/Projects:</p3>
-<p3> Since I started getting into coding, i've done work on a website called Scratch. On that website I started making games like paddle ball or side scrollers. While working on that website i've started practicing how to make MVP's, storyboards, and wireframes </p3> 
+<p3> Since I started getting into coding, i've done work on a website called Scratch. On that website I started making games like paddle ball or side scrollers. While working on that website i've started practicing how to make MVP's, storyboards, and wireframes. Below are two of the games that I have made. </p3> 
  
