--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,10 @@
-<h1 style="color:orange;">Gabriela Perez</h1>
 <img src="profile_images/851579580007579649/2Z9NJUpb.jpg" alt="gabrielaperez" style="width:400px;height:400px;">
+<h1 style="color:orange;">Gabriela Perez</h1>
 <p1 style="color:pink;">Bio:</p1> 
 <p1> My name is Gabriela Perez and i'm from Richmond California. I've lived in California for most of my life, but I did live in Mexico for about three years. Currently, i'm in a program called Girls Who Code because I wanted to get into coding before I go to college. My program's location is at Twitter HQ in San Francisco.</p> 
 <p2 style="color:pink;">Fun Fact About Me:</p2> 
 <p2> I don't have any experience with coding, and this is my first time learning it </p> 
 <p3 style="color:pink;"> Work/Projects:</p3>
 <p3> Since I started getting into coding, i've done work on a website called Scratch. On that website I started making games like paddle ball or side scrollers. While working on that website i've started practicing how to make MVP's, storyboards, and wireframes. Below are two of the games that I have made. </p3> 
- 
+<p4 style="color:pink;"> Likes and Dislikes:</p4>
+<p4> Things I like include being outside, going out with friends, being with my pets, and listening to music. Things I dislike are 
