--- a/aboutme.html
+++ b/aboutme.html
@@ -1,3 +1,4 @@
+<body style="background-color:grey;">
 <img src="profile_images/851579580007579649/2Z9NJUpb.jpg" alt="gabrielaperez" style="width:400px;height:400px;">
 <h1 style="color:orange;">Gabriela Perez</h1>
 <p1 style="color:pink;">Bio:</p1> 
