--- a/aboutme.html
+++ b/aboutme.html
@@ -1,3 +1,5 @@
+</head>
+<link rel="stylesheet" href="portfolio_GWC/aboutme.css">
 <body style="background-color:lightblue;">
 <img src="profile_images/851579580007579649/2Z9NJUpb.jpg" alt="gabrielaperez" style="width:400px;height:400px;">
 <h1 style="color:orange;">Gabriela Perez</h1>
