--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,8 @@
-<body style="background-color:lightblue;">
+<body style="background-color:PaleVioletRed;">
 
 <h1 style="text-align:center;">Gabriela Perez</h1>
 
-<img src="https://pbs.twimg.com/profile_images/851579580007579649/2Z9NJUpb_400x400.jpg"alt="gabrielaperez" style="width:200px;height:200px;">
+<img src= "https://pbs.twimg.com/media/C8dKYwWVoAALeHx.jpg" alt="gabrielaperez" style="width:200px;height:200px;"> <p/>
 
 <p1 style="color:white;">Bio:</p1> 
 
@@ -24,7 +24,7 @@
 
 <p5> This was the first game I created on scratch with a partner, and together we were able to get the paddles and ball to move so two players can play the game.We also added extra features, like sound and color change. </p>
 
-<a href="http://imgur.com/ldkSuCO"><img src="http://i.imgur.com/ldkSuCO.png" title="source: imgur.com"style="width:150px;height:150px;" /></a> 
+<a href="http://imgur.com/ldkSuCO"><img src="http://i.imgur.com/ldkSuCO.png" title="source: imgur.com"style="width:150px;height:150px;" /></a> </p>  
 
 <p6 style="color:white;">Social Media:</p6>
 
